test/scc/pp/errors/022.t
#define A(a, b, c, d)
A(1, 2, 3